# slider_captcha_server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_CN.md  docker-compose.prod.yml  docker-compose.yml
bench/: README.md  README_CN.md  batch_test_puzzle.py  batch_test_solution.py  run_benchmark.sh  wrk_test.lua
examples/: actix.rs  actix_production.rs  benchmark.rs  generate_random.rs
src/: cache.rs  config.rs  lib.rs  puzzle.rs  server.rs
src/generator/: mod.rs  model.rs
tests/: cache_tests.rs  generator_tests.rs
