[package]
name = "slider_captcha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
rand = "0.8.4"


[dev-dependencies]
actix-web = "3.3"
actix-rt = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
dashmap = "5.5"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }

[[example]]
name = "actix"

[[example]]
name = "actix_production"

[[example]]
name = "benchmark"
