[package]
name = "slider_captcha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
rand = "0.8.4"
actix-web = { version = "4.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.21"
dashmap = "5.5"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"

[dev-dependencies]
actix-web = { version = "4.5", features = ["macros"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "sync", "test-util"] }
